sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: type mismatch;
 found   : Boolean
 required: Int
		for(i <-0 to i<(getNombreValeurs()-1) by 1){
                              ^